fix paragraph overflow-x issue

--- a/css/post.css
+++ b/css/post.css
@@ -7940,6 +7940,10 @@ h1 a:visited, h2 a:visited, h3 a:visited, h4 a:visited, h5 a:visited, h6 a:visit
   color: #4a6b80;
 }
 
+p {
+  overflow-x: scroll;
+}
+
 .wrap {
   max-width: 960px;
   margin: 0 auto;
