--- a/scss/global.scss
+++ b/scss/global.scss
@@ -22,6 +22,10 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
+p {
+    overflow-x: scroll;
+}
+
 .wrap {
   max-width: 960px;
   margin: 0 auto;
